[package]
name = "jamal"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "bi-directional transformations between json and yaml documents"
documentation = "https://softprops.github.io/jamal"
homepage = "https://github.com/softprops/jamal"
repository = "https://github.com/softprops/jamal"
keywords = ["json", "yaml", "serde"]
license = "MIT"

[dependencies]
serde_json = "0.7"
serde_yaml = "0.2"
